[package]
name = "darkbio-crypto-wasm"
version = "0.2.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
darkbio-crypto = { version="0.14.0", features = ["rand", "hkdf", "argon2", "cose", "cwt", "x509"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
